--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -27,7 +27,7 @@
         android:layout_above="@+id/scoresAppButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="#F08C35"
+        android:background="buttonOrange"
         android:layout_marginBottom="10dp" />
 
     <Button
@@ -39,7 +39,7 @@
         android:layout_above="@+id/libraryAppButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="#F08C35"
+        android:background="buttonOrange"
         android:layout_marginBottom="10dp" />
 
     <Button
@@ -51,7 +51,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="10dp"
-        android:background="#F08C35" />
+        android:background="buttonOrange" />
 
     <Button
         android:layout_width="match_parent"
@@ -61,7 +61,7 @@
         android:layout_below="@+id/buildButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="#F08C35"
+        android:background="buttonOrange"
         android:layout_marginBottom="10dp" />
 
     <Button
@@ -72,7 +72,7 @@
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="#F08C35"
+        android:background="buttonOrange"
         android:layout_marginBottom="10dp" />
 
     <Button
@@ -83,5 +83,5 @@
         android:layout_below="@+id/xyzButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="#ff0000" />
+        android:background="buttonRed" />
 </RelativeLayout>
